# Clustering-of-Vendor-Profiles

./: .coveragerc  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  LICENSE.md  README.md  data.dvc  dvc.yaml  env.yml  mypy.ini  pyproject.toml
emb/: .gitignore
evaluation/: .gitignore
language_model/: .gitignore
language_model/backward/: .gitignore
profile_extraction/evaluation/: evaluate_nn_algorithm.py
profile_extraction/ner_model/: corpus.py  train_embeddings.py
profile_extraction/profile_clustering/: cluster.py  embedding.py  main.py  tfidf.py
profile_extraction/profile_creation/: main.py  profile.py
profile_extraction/profile_creation/chat/: chat.py
profile_extraction/profile_creation/extraction/: extractors.py  profile_extractor.py
profile_extraction/profile_visualization/: main.py  profilevis.py
profile_extraction/rule_based_pipeline/: create_pattern_file.py  rule_based_pipeline.py  spacy_corpus.py
profile_extraction/util/: main.py  utils.py
tests/: test_corpus.py
